my_library popup
my_library popup

--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -930,6 +930,7 @@
                                             .thumb_small {
                                                 margin-top: 5%;
                                                 .swiper-slide {
+                                                    width: 100px; height: 100px;
                                                 }
                                             }
                                             
