--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -81,6 +81,51 @@ body {
                 margin-left: 57px;
                 display: flex;
                 gap: 40px;
+                .btn_member {
+                    position: relative;
+                    a {
+                        display: flex; align-items: center;
+                        gap: 8px;
+                        img {
+                            @include transition(all .15s);
+                        }
+                        &.active, &:hover {
+                            img {
+                                transform: rotate(-180deg);
+                            }
+                        }
+                    }
+                    
+                    .member_box {
+                        display: none;
+                        position: absolute; right:0; top: 100%; margin-top: 10px;
+                        background-color: #fff;
+                        width: 256px;
+                        border: solid 1px #e5e5e5;
+                        dl {
+                            font-size: 14px;
+                            line-height: 1.43;
+                            letter-spacing: -0.28px;
+                            dt {
+                                padding: 22px 20px;
+                                border-bottom: solid 1px #e5e5e5;
+                                p {
+                                    &.name {font-weight: bold;}
+                                    &.email {color: #999;}
+                                }
+                            }
+                            dd {
+                                display: flex; flex-direction: column; gap: 16px;
+                                padding: 20px;
+                                font-weight: bold;
+                            }
+                        }
+                    }
+                    a:hover ~ .member_box,
+                    a.active ~ .member_box {
+                        display: block;
+                    }
+                }
             }
         
             // header_ham
@@ -345,67 +390,65 @@ body {
                 }
             }
         }
-        &#popup_cmf {
-            .select_wrap {
-                display: flex; flex-direction: column; gap: 6px;
-                border: 1px solid #E5E5E5;
-                padding: 10px;
-                max-height: 190px; overflow: auto;
-                label {
-                    cursor: pointer;
-                    p {
-                        display: flex; align-items: center;justify-content: space-between;
-                        width: 100%;
-                        padding: 11px 20px;
-                        border: 2px solid #E5E5E5;
-                        border-radius: 2px;
-                        color: #999;
-                        font-size: 15px;
-                        line-height: 1.6;
-                        letter-spacing: -0.3px;
-                    }
-                    input[type=radio], img {display: none;}
-                    input[type=radio]:checked + p img {display: block;}
-                    input[type=radio]:checked + p {border: 2px solid #000; color: #000;}
+        .select_wrap {
+            display: flex; flex-direction: column; gap: 6px;
+            border: 1px solid #E5E5E5;
+            padding: 10px;
+            max-height: 190px; overflow: auto;
+            label {
+                cursor: pointer;
+                p {
+                    display: flex; align-items: center;justify-content: space-between;
+                    width: 100%;
+                    padding: 11px 20px;
+                    border: 2px solid #E5E5E5;
+                    border-radius: 2px;
+                    color: #999;
+                    font-size: 15px;
+                    line-height: 1.6;
+                    letter-spacing: -0.3px;
                 }
+                input[type=radio], img {display: none;}
+                input[type=radio]:checked + p img {display: block;}
+                input[type=radio]:checked + p {border: 2px solid #000; color: #000;}
             }
-            .new_library {
-                margin-top: 60px;
-                
-                label {
-                    display: block;
-                    position: relative;
-                    input {
-                        width: 100%;
-                        padding: 11px 20px;
-                        border: 2px solid #E5E5E5;
-                        border-radius: 2px;
-                        font-size: 15px;
-                        line-height: 1.6;
-                        letter-spacing: -0.3px;
-                        &::placeholder {color: #999;}
-                    }
-                    img {
-                        cursor: pointer;
-                        position: absolute; right: 20px; top: 50%; transform: translateY(-50%);
-                    }
-                    input:focus + img {filter: invert(100%);}
-                }
-               
-            }
-            input[type=submit]:disabled {background-color: #E5E5E5;color: #999;}
+        }
+        .new_library {
+            margin-top: 60px;
             
-            input[type=submit] {
-                @include font-openSans;
-                width: 100%;
-                margin-top: 50px;
-                padding: 13px;
-                font-size: 15px;
-                font-weight: bold;
-                letter-spacing: -0.3px;
-                background-color: #000;
-                color: #fff;
+            label {
+                display: block;
+                position: relative;
+                input {
+                    width: 100%;
+                    padding: 11px 20px;
+                    border: 2px solid #E5E5E5;
+                    border-radius: 2px;
+                    font-size: 15px;
+                    line-height: 1.6;
+                    letter-spacing: -0.3px;
+                    &::placeholder {color: #999;}
+                }
+                img {
+                    cursor: pointer;
+                    position: absolute; right: 20px; top: 50%; transform: translateY(-50%);
+                }
+                input:focus + img {filter: invert(100%);}
             }
+            
+        }
+        input[type=submit]:disabled {background-color: #E5E5E5;color: #999;}
+        
+        input[type=submit] {
+            @include font-openSans;
+            width: 100%;
+            margin-top: 50px;
+            padding: 13px;
+            font-size: 15px;
+            font-weight: bold;
+            letter-spacing: -0.3px;
+            background-color: #000;
+            color: #fff;
         }
     }
     // default popup
@@ -2007,7 +2050,7 @@ body {
                         >article {                        
                             width: 100%; height: 100%;
                             &.fixed {
-                                padding-top: 200px;
+                                @include flexCenter;
                                 position: fixed; z-index: 0; left: 0; top: 0;
                                 height: 100vh;
                             }
