--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -41,7 +41,7 @@
     body {
         #header{
             #header_wrap {
-                padding: 0 4%;
+                padding: 0 4.2%;
                 #header_center {
                     gap: 30px;
                 }
@@ -56,7 +56,7 @@
         #footer {
             margin-top: 100px;
             article {
-                padding: 100px 4%;
+                padding: 100px 4.2%;
                 > div {
                     &.info_01 {
                         flex-direction: column;
@@ -135,7 +135,7 @@
 
     @mixin marginTop-200 {margin: 130px auto 0;}
 
-    @mixin subLayoutPadding {padding-left: 4%; padding-right: 4%;}
+    @mixin subLayoutPadding {padding-left: 4.2%; padding-right: 4.2%;}
 
 
     
@@ -158,7 +158,7 @@
                                 figcaption {
                                     top: 0; transform: unset;
                                     margin-top: 130px;
-                                    padding: 0 4%;
+                                    padding: 0 4.2%;
                                     p {
                                         &.text_01 {
                                             @include hidaFont_50;
@@ -196,7 +196,7 @@
                     &.ms_02 {
                         // margin: 120px auto;
                         margin: 80px auto;
-                        padding: 0 0 0 4%;
+                        padding: 0 0 0 4.2%;
                         article {
                             > div {
                                 flex-direction: column;
@@ -268,7 +268,7 @@
                         article {
                             @include fixed-layout_1920;
                             @include paddingLeft_10();
-                            padding: 0 0 0 4%;
+                            padding: 0 0 0 4.2%;
                             .box {
                                 .text_wrap {
                                     display: flex; align-items: unset; flex-direction: column;
@@ -306,7 +306,7 @@
                         @include fixed-layout_1920;
                         article {
                             @include paddingLeft_10();
-                            padding: 120px 4% 0;
+                            padding: 120px 4.2% 0;
                             flex-direction: column;
                             .left { 
                                 flex-direction: row; flex-wrap: wrap;
@@ -467,7 +467,7 @@
                     cType_01
                 */
                 &.list.cType_01 {
-                    padding-left: 4%;
+                    padding-left: 4.2%;
                     .content_wrap {
                         .con {
                             ul {
@@ -651,7 +651,7 @@
                         
                     &.list {
                         .banner {
-                            margin-right: 4%;
+                            margin-right: 4.2%;
                             // height: 500px;
                             // figure {
                             //     @include fullsize;
@@ -808,8 +808,6 @@
                     }
 
                 }
-
-                    
                 &#portfolio {
                     @include marginTop-200;
 
@@ -942,8 +940,83 @@
 
                     }
                 }
-            
+                &#my_library {
+                    @include marginTop-200;
+
+                    .sec_tit {
+                        @include subLayoutPadding();
+                        padding-bottom: 17px;
+                        border-bottom: 2px solid #f1f1f1;
+                        .default_tab {
+                            #sec_tab {
+                                li {
+                                }
+                            }
+                        }
+                        #hidden_tab {
+                            @include subLayoutPadding();
+                            display: block;
+                            padding-top: 20px;
+                            padding-bottom: 20px;
+                            border-bottom: 2px solid #f1f1f1;
+                            .selected_tab {
+                                a {
+                                    // font-size: 24px;
+                                }
+                            }
+                        }
+                    }
     
+                    
+                    .content {
+                        @include subLayoutPadding();
+                        @include marginTop-120;
+                        flex-direction: column; gap: 100px;
+                        > div {
+                            width: 100%;
+                            max-width: 100%;
+                            &.list_wrap {
+                                
+                                h2 {
+                                    font-size: 18px;
+                                }
+                                .board_wrap {
+                                    ul {
+                                        li {
+                                            $wh: 150px;
+                                            width:$wh; height:$wh;
+                                            a {
+                                                padding: 20px;
+                                            }
+                                        }
+                                    }
+                                    dl {
+                                        padding: 12px 20px;
+                                        dt {
+                                            font-size: 16px;
+                                            h3 {
+                                                font-size: 14px;
+                                            }
+                                        }
+                                        dd {
+                                            h3 {
+                                                font-size: 14px;
+                                            }
+                                            p {
+                                                font-size: 14px;
+                                            }
+                                        }
+                                    }
+                                }
+        
+                            }
+
+                        }
+                        
+                    }
+
+
+                }
             }
         } 
     }
@@ -970,7 +1043,7 @@
                         article {
                             @include fixed-layout_1920;
                             @include paddingLeft_10();
-                            padding: 0 4%;
+                            padding: 0 4.2%;
                             .box {
                                 position: relative;
                                 display: flex; justify-content: unset;
@@ -1258,7 +1331,7 @@
     @mixin hidaFont_subtit {font-size: 34px;}
 
     @mixin marginTop-200 {margin: 130px auto 0;}
-    @mixin subLayoutPadding {padding-left: 4%; padding-right: 4%;}
+    @mixin subLayoutPadding {padding-left: 4.2%; padding-right: 4.2%;}
 
 
 
@@ -1300,7 +1373,7 @@
                 align-items: flex-end;
                 .form_wrap {
                     width: 100%;
-                    padding: 40px 4% 60px;
+                    padding: 40px 4.2% 60px;
                     border-top-left-radius: 10px;
                     border-top-right-radius: 10px;
                     h2 {
@@ -1361,7 +1434,7 @@
                             .swiper-slide {
                                 figcaption {
                                     margin-top: 150px;
-                                    padding: 0 4%;
+                                    padding: 0 4.2%;
                                     p {
                                         &.text_01 {
                                             @include hidaFont_50;
@@ -1540,7 +1613,7 @@
                                     border-top-left-radius: 10px;
                                     border-top-right-radius: 10px;
                                     .filter_tab_mo {
-                                        padding: 40px 4% 20px;
+                                        padding: 40px 4.2% 20px;
                                         display: flex; gap: 40px; overflow: auto;
                                         &::-webkit-scrollbar {height: 1px;}
                                         li {
@@ -1628,7 +1701,7 @@
                         }
                         form[name=save_frm] {
                             height: 80px;
-                            padding: 15px 4%;
+                            padding: 15px 4.2%;
                             p {
                                 display: flex; align-items: center;
                                 font-size: 24px;
@@ -1669,7 +1742,7 @@
                     cType_01
                 */
                 &.list.cType_01 {
-                    padding-left: 4%;
+                    padding-left: 4.2%;
                     .content_wrap {
                         .con {
                             @include marginTop-80;
@@ -1976,7 +2049,7 @@
                             figure {
                                 align-items: unset;
                                 figcaption {
-                                    padding: 7.4% 0 0 7.4%;
+                                    padding: 7.4.2% 0 0 7.4.2%;
                                     p {
                                         // font-size: 24px;
                                     }
@@ -2123,11 +2196,11 @@
                             .nav_location {
                                 flex-direction: column;
                                 h2 {
-                                    padding: 0 4% 17px 4%;
+                                    padding: 0 4.2% 17px 4.2%;
                                     border-bottom: 1px solid #f1f1f1;
                                 }
                                 ul {
-                                    padding: 20px 4%;
+                                    padding: 20px 4.2%;
                                     overflow: auto;
                                     &::-webkit-scrollbar {display: none;}
                                     // gap: 30px;
@@ -2258,7 +2331,7 @@
 
     @mixin hidaFont_subtit {font-size: 26px;}
     @mixin marginTop-200 {margin: 100px auto 0;}
-    @mixin subLayoutPadding {padding-left: 4%; padding-right: 4%;}
+    @mixin subLayoutPadding {padding-left: 4.2%; padding-right: 4.2%;}
 
     @mixin marginTop-80 {margin-top: 50px;}
     @mixin marginTop-50 {margin-top: 40px;}
@@ -2323,7 +2396,7 @@
         #footer {
             margin-top: 80px;
             article {
-                padding: 60px 4%;
+                padding: 60px 4.2%;
                 > div {
                     &.info_01 {
                         h2 {@include hidaFont_50;}
@@ -2374,7 +2447,7 @@
         .popup {
             article {
                 .form_wrap {
-                    padding: 20px 4% 40px;
+                    padding: 20px 4.2% 40px;
                     form {
                         #btn_pop_close {
                             cursor: pointer;
@@ -2563,7 +2636,7 @@
     
                     &.ms_04 {
                         article {
-                            padding: 60px 4% 0;
+                            padding: 60px 4.2% 0;
                             .left { 
                                 h2 {@include hidaFont_50;}
                                 p {
@@ -2651,7 +2724,7 @@
                             form[name=search_frm] {
                                 .filter_tab {
                                     .filter_tab_mo {
-                                        padding: 20px 4% 10px;
+                                        padding: 20px 4.2% 10px;
                                         gap:30px;
                                         li {
                                             // font-size: 24px;
@@ -2757,7 +2830,7 @@
                     cType_01
                 */
                 &.list.cType_01 {
-                    padding-left: 4%;
+                    padding-left: 4.2%;
                     .content_wrap {
                         .con {
                             @include marginTop-80;
@@ -3154,7 +3227,7 @@
                                 h2 {
                                 }
                                 ul {
-                                    padding: 10px 4%;
+                                    padding: 10px 4.2%;
                                     gap: 20px;
                                     li {
                                         a {
