--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -999,9 +999,7 @@
                                             }
                                         }
                                         dd {
-                                            h3 {
-                                                font-size: 14px;
-                                            }
+                                           
                                             p {
                                                 font-size: 14px;
                                             }
@@ -2315,6 +2313,81 @@
 
                     }
                 }
+
+                &#my_library {
+                    @include marginTop-200;
+
+                    .sec_tit {
+                        @include subLayoutPadding();
+                        // padding-bottom: 17px;
+                        .default_tab {
+                            #sec_tab {
+                                li {
+                                }
+                            }
+                        }
+                        #hidden_tab {
+                            @include subLayoutPadding();
+                            // padding-top: 20px;
+                            // padding-bottom: 20px;
+                            .selected_tab {
+                                a {
+                                    // font-size: 24px;
+                                }
+                            }
+                        }
+                    }
+    
+                    
+                    .content {
+                        @include subLayoutPadding();
+                        @include marginTop-120;
+                        // gap: 100px;
+                        > div {
+                            &.list_wrap {
+                                
+                                h2 {
+                                    // font-size: 18px;
+                                    font-size: 24px;
+                                    padding-bottom: 2px;
+                                }
+                                .board_wrap {
+                                    ul {
+                                        li {
+                                            $wh: 150px;
+                                            width:$wh; height:$wh;
+                                            a {
+                                                padding: 20px;
+                                            }
+                                        }
+                                    }
+                                    dl {
+                                        padding: 12px 20px;
+                                        dt {
+                                            // font-size: 16px;
+                                            font-size: 24px;
+                                            h3 {
+                                                // font-size: 14px;
+                                                font-size: 20px;
+                                            }
+                                        }
+                                        dd {
+                                            p {
+                                                // font-size: 14px;
+                                                font-size: 20px;
+                                            }
+                                        }
+                                    }
+                                }
+        
+                            }
+
+                        }
+                        
+                    }
+
+
+                }
                 
 
             }
@@ -3346,6 +3419,93 @@
                         }
 
                     }
+                }
+
+                
+                &#my_library {
+                    @include marginTop-200;
+
+                    .sec_tit {
+                        @include subLayoutPadding();
+                        // padding-bottom: 17px;
+                        .default_tab {
+                            #sec_tab {
+                                li {
+                                }
+                            }
+                        }
+                        #hidden_tab {
+                            @include subLayoutPadding();
+                            padding-top: 10px;
+                            padding-bottom: 10px;
+                            .selected_tab {
+                                a {
+                                    // font-size: 24px;
+                                    font-size: 18px;
+                                }
+                            }
+                        }
+                    }
+    
+                    
+                    .content {
+                        @include subLayoutPadding();
+                        @include marginTop-120;
+                        gap: 80px;
+                        > div {
+                            &.list_wrap {
+                                h2 {
+                                    // font-size: 18px;
+                                    // font-size: 24px;
+                                    font-size: 18px;
+                                    padding-bottom: 2px;
+                                }
+                                .board_wrap {
+                                    padding: 10px 15px;
+                                    ul {
+                                        li {
+                                            $wh: 125px;
+                                            width:$wh; height:$wh;
+                                            a {
+                                                padding: 10px;
+                                            }
+                                        }
+                                    }
+                                    dl {
+                                        padding: 10px 20px;
+                                        flex-direction: column; align-items: flex-start;
+
+                                        dt {
+                                            width: 100%;
+                                            flex-direction: column; align-items: flex-start;
+                                            // font-size: 16px;
+                                            // font-size: 24px;
+                                            font-size: 18px;
+                                            h3 {
+                                                margin: 0;
+                                                // font-size: 14px;
+                                                // font-size: 20px;
+                                                font-size: 16px;
+                                            }
+                                        }
+                                        dd {
+                                            width: 100%; justify-content: flex-end;
+                                            p {
+                                                // font-size: 14px;
+                                                // font-size: 20px;
+                                                font-size: 16px;
+                                            }
+                                        }
+                                    }
+                                }
+        
+                            }
+
+                        }
+                        
+                    }
+
+
                 }
 
             }
